---
config:
  theme: neutral
  er:
    fontSize: 14
---
erDiagram
    PATIENT ||--o{ TRIAGE_ENCOUNTER : has
    TRIAGE_ENCOUNTER ||--o{ ENCOUNTER_SYMPTOM : reports
    SYMPTOM ||--o{ ENCOUNTER_SYMPTOM : appears_in
    SYMPTOM ||--o{ DISEASE_SYMPTOM : indicates
    DISEASE ||--o{ DISEASE_SYMPTOM : characterized_by
    DEPARTMENT ||--o{ DISEASE : treats
    TRIAGE_ENCOUNTER ||--o{ MODEL_PREDICTION : receives
    DISEASE ||--o{ MODEL_PREDICTION : predicted_as
    MODEL_PREDICTION ||--o| CLINICIAN_REVIEW : reviewed_by
    CLINICIAN ||--o{ CLINICIAN_REVIEW : performs
    DEPARTMENT ||--o{ CLINICIAN : employs
    DEPARTMENT ||--o{ CLINICIAN_REVIEW : final_routing

    PATIENT {
        int patient_id PK
        int birth_year
        string sex
        string phone
    }
    TRIAGE_ENCOUNTER {
        int encounter_id PK
        int patient_id FK
        datetime encounter_time
        string chief_complaint
        int acuity_level
        string status
    }
    SYMPTOM {
        int symptom_id PK
        string symptom_name
        string body_system
    }
    ENCOUNTER_SYMPTOM {
        int encounter_id PK
        int symptom_id PK
        string severity
        string onset
    }
    DISEASE {
        int disease_id PK
        string disease_name
        int department_id FK
    }
    DISEASE_SYMPTOM {
        int disease_id PK
        int symptom_id PK
        string typicality
    }
    DEPARTMENT {
        int department_id PK
        string department_name
        string floor_location
        string phone_ext
    }
    MODEL_PREDICTION {
        int prediction_id PK
        int encounter_id FK
        string model_version
        string raw_disease_text
        string raw_department_text
        int predicted_disease_id FK
        float confidence
        datetime predicted_at
    }
    CLINICIAN {
        int clinician_id PK
        string full_name
        string role
        int department_id FK
    }
    CLINICIAN_REVIEW {
        int review_id PK
        int prediction_id FK
        int clinician_id FK
        string decision
        int final_department_id FK
        datetime reviewed_at
    }
